[metadata]
name = singly-linkedlist
version = 0.0.1
author = Firstname Lastname
author_email = author@example.com
description = A small package with Singly Linkedlist data structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alan-augustine/python_study
project_urls =
    Bug Tracker = https://github.com/alan-augustine/python_study/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
